--- a/src/app/pages/authentication/login/login.component.scss
+++ b/src/app/pages/authentication/login/login.component.scss
@@ -16,7 +16,6 @@
   }
 
   .login-sub-title {
-    font-family: 'Lato';
     font-style: normal;
     font-weight: 400;
     font-size: 17px;
@@ -26,7 +25,6 @@
   }
 
   form {
-    font-family: 'Lato';
     text-align: left;
     padding: 10px 60px;
     .input-margin {
@@ -68,10 +66,35 @@
 }
 
 
+.ml--50 {
+  margin-left: -50px;
+}
+
+.ml--30 {
+  margin-left: -30px;
+}
+
+
+@media screen and (max-width: 1200px) {
+  .login-content {
+    max-width: 80%;
+    padding: 0;
+  }
+}
+
+.d-block {
+  display: block;
+}
 
 @media screen and (max-width: 768px) {
   .login-content {
-    max-width: 80%;
+    max-width: 90%;
+    padding: 0;
+  }
+}
+@media screen and (max-width: 400px) {
+  .login-content {
+    max-width: 100%;
     padding: 0;
   }
 }
