--- a/src/app/theme/header/header.component.scss
+++ b/src/app/theme/header/header.component.scss
@@ -1,6 +1,5 @@
-
 .nav__top {
-  background-color: #7E33E0;
+  background-color: #7e33e0;
 }
 
 .nav__bottom {
@@ -37,6 +36,65 @@
   font-size: 16px;
   line-height: 19px;
   margin-right: 20px;
+
+  .nav-link {
+    .navbar__link-container {
+      display: flex;
+      align-items: center;
+      text-transform: none;
+
+      .cheems-avatar {
+        width: 1.375rem;
+        height: 1.375rem;
+        display: inline-block;
+        position: relative;
+        border-radius: 50%;
+        border: 0.0625rem solid rgba(0, 0, 0, 0.09);
+        box-sizing: border-box;
+
+        .cheems-avatar-placeholder {
+          width: 100%;
+          position: relative;
+          padding-top: 100%;
+          background-color: #f5f5f5;
+          border-radius: 50%;
+          overflow: hidden;
+
+          .svg-style {
+            font-size: 0.9375rem;
+            line-height: 0.9375rem;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-weight: 400;
+            line-height: 2rem;
+            -webkit-font-smoothing: antialiased;
+            display: inline-block;
+            width: 1em;
+            height: 1em;
+          }
+        }
+
+        .cheems-avatar-img {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          display: block;
+          border-radius: 50%;
+        }
+
+      }
+      .username-text {
+        max-width: 9.375rem;
+        padding-left: 0.3125rem;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+    }
+  }
 }
 
 .header-first {
@@ -50,7 +108,7 @@
 }
 .nav__item__header__bottom {
   font-family: "Josefin Sans";
-  color: #0D0E43;
+  color: #0d0e43;
   font-size: 34px;
   line-height: 40px;
   font-weight: bold;
@@ -58,7 +116,7 @@
 }
 .nav__item__bottom {
   font-family: "Josefin Sans";
-  color: #0D0E43;
+  color: #0d0e43;
   font-size: 16px;
   line-height: 20px;
   margin-right: 30px;
@@ -68,7 +126,6 @@
   color: white;
   background-color: hsl(334, 96%, 58%);
 }
-
 
 .ps-site-overlay {
   position: fixed;
@@ -80,7 +137,7 @@
   visibility: hidden;
   opacity: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  transition: all .25s ease;
+  transition: all 0.25s ease;
 }
 
 .ps-site-overlay.active {
@@ -89,7 +146,7 @@
 }
 
 @media screen and (max-width: 768px) {
-  .style-header-text{
+  .style-header-text {
     display: none;
   }
   .navbar__spacer {
