--- a/src/assets/css/animation-style.scss
+++ b/src/assets/css/animation-style.scss
@@ -45,6 +45,23 @@
   }
 }
 
+@keyframes slideInLeft {
+  from {
+    opacity: 0;
+    transform: translateX(calc(100% + 32px));
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes fadeOut {
+  to {
+    opacity: 0;
+  }
+}
+
 
 .animation-delay-1 {
   animation-delay: 1s;
