--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,30 +1,33 @@
 <div class="home">
   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" style="margin-bottom: 30px;">
     <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+        aria-label="Slide 2"></button>
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
         <!-- <img src="..." class="d-block w-100" alt="..."> -->
         <div class="container" style="position: relative;padding: 0;">
 
-          <div class="content animated fadeIn"  [style.background-image]="'url(' + './../../../assets/images/ss-galaxy.webp' + ')'">
+          <div class="content animated fadeIn"
+            [style.background-image]="'url(' + './../../../assets/images/ss-galaxy.webp' + ')'">
             <div class="description-text flex-width-60 animated fadeInUp animation-delay-1">
-                <div class="title">
-                  Galaxy Z Fold4
-                </div>
-                <div class="text">
-                  Mở ra một khởi đầu mới
-                </div>
-                <div class="text">
-                  Vẻ đẹp tinh tế nhưng không kém phần thời thượng
-                </div>
-                <div class="text">
-                  Thiết kế sang trọng, gọn nhẹ khi gập vào và to lớn khi mở ra
-                </div>
+              <div class="title">
+                Galaxy Z Fold4
               </div>
-              <div class="black-opacity"></div>
+              <div class="text">
+                Mở ra một khởi đầu mới
+              </div>
+              <div class="text">
+                Vẻ đẹp tinh tế nhưng không kém phần thời thượng
+              </div>
+              <div class="text">
+                Thiết kế sang trọng, gọn nhẹ khi gập vào và to lớn khi mở ra
+              </div>
+            </div>
+            <div class="black-opacity"></div>
             <div class="description-image flex-width-40">
               <button></button>
               <div class="circle p-absolute">
@@ -35,42 +38,45 @@
           </div>
         </div>
       </div>
-        <div class="carousel-item">
-          <div class="container" style="position: relative;padding: 0;">
+      <div class="carousel-item">
+        <div class="container" style="position: relative;padding: 0;">
 
-            <div class="content animated fadeIn"  [style.background-image]="'url(' + './../../../assets/images/lenovo-thinkpad-xp.webp' + ')'">
-              <div class="description-text flex-width-60 animated fadeInUp animation-delay-1">
-                  <div class="title">
-                    Lenovo ThinkPad X1 Carbon Gen 9
-                  </div>
-                  <div class="text">
-                    Xếp hạng đầu bảng của Lenovo.
-                  </div>
-                  <div class="text">
-                    Nhiều tính năng nổi bật so với những phiên bản trước.
-                  </div>
-                  <div class="text">
-                    "Trâu" và đúng vậy, hoạt động với hiệu suất tối đa trong thời gian rất dài.
-                  </div>
-                </div>
-                <div class="black-opacity" style="background-color: rgba(26, 17, 29, 0.35);"></div>
+          <div class="content animated fadeIn"
+            [style.background-image]="'url(' + './../../../assets/images/lenovo-thinkpad-xp.webp' + ')'">
+            <div class="description-text flex-width-60 animated fadeInUp animation-delay-1">
+              <div class="title">
+                Lenovo ThinkPad X1 Carbon Gen 9
+              </div>
+              <div class="text">
+                Xếp hạng đầu bảng của Lenovo.
+              </div>
+              <div class="text">
+                Nhiều tính năng nổi bật so với những phiên bản trước.
+              </div>
+              <div class="text">
+                "Trâu" và đúng vậy, hoạt động với hiệu suất tối đa trong thời gian rất dài.
+              </div>
+            </div>
+            <div class="black-opacity" style="background-color: rgba(26, 17, 29, 0.35);"></div>
 
-              <div class="description-image flex-width-40">
-                <button></button>
-                <div class="circle p-absolute">
-                </div>
-                <div class="circle p-absolute">
-                </div>
+            <div class="description-image flex-width-40">
+              <button></button>
+              <div class="circle p-absolute">
+              </div>
+              <div class="circle p-absolute">
               </div>
             </div>
           </div>
         </div>
+      </div>
     </div>
-    <button class="carousel-control-prev" style="padding-left: 20px;" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <button class="carousel-control-prev" style="padding-left: 20px;" type="button"
+      data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" style="padding-right: 20px;" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <button class="carousel-control-next" style="padding-right: 20px;" type="button"
+      data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
@@ -91,7 +97,7 @@
       <div class="title">
         Các thương hiệu nổi tiếng
       </div>
-    <app-hot-trademark></app-hot-trademark>
+      <app-hot-trademark></app-hot-trademark>
     </div>
     <div class="content">
       <div class="title">
@@ -103,4 +109,3 @@
     </div>
   </div>
 </div>
-
