--- a/src/app/theme/header/header.component.html
+++ b/src/app/theme/header/header.component.html
@@ -51,7 +51,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Trang cá nhân</a></li>
-                <li><a class="dropdown-item" href="#">Đăng xuất</a></li>
+                <li><a class="dropdown-item" type="button" (click)="logout()">Đăng xuất</a></li>
               </ul>
             </li>
           </ul>
